--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = salt/formulae/postgres-formula
 	url = https://github.com/tfolio/postgres-formula.git
 	branch = config-sls
+[submodule "salt/formulae/nginx-formula"]
+	path = salt/formulae/nginx-formula
+	url = https://github.com/tfolio/nginx-formula.git
+	branch = tfolio
